testdata/baselines/reference/submodule/compiler/strictOptionalProperties3.errors.txt
a.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(7,7): error TS2375: Type '{ value: undefined; }' is not assignable to type 'A' with 'exactOptionalPropertyTypes: true'. Consider adding 'undefined' to the types of the target's properties.
  Types of property 'value' are incompatible.
    Type 'undefined' is not assignable to type 'number'.
a.js(13,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(14,7): error TS2375: Type '{ value: undefined; }' is not assignable to type 'B' with 'exactOptionalPropertyTypes: true'. Consider adding 'undefined' to the types of the target's properties.
  Types of property 'value' are incompatible.
    Type 'undefined' is not assignable to type 'number'.


==== a.js (4 errors) ====
    /**
     * @typedef {object} A
     * @property {number} [value]
     */
    
    /** @type {A} */
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const a = { value: undefined }; // error
          ~
!!! error TS2375: Type '{ value: undefined; }' is not assignable to type 'A' with 'exactOptionalPropertyTypes: true'. Consider adding 'undefined' to the types of the target's properties.
!!! error TS2375:   Types of property 'value' are incompatible.
!!! error TS2375:     Type 'undefined' is not assignable to type 'number'.
    
    /**
     * @typedef {{ value?: number }} B
     */
    
    /** @type {B} */
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const b = { value: undefined }; // error
          ~
!!! error TS2375: Type '{ value: undefined; }' is not assignable to type 'B' with 'exactOptionalPropertyTypes: true'. Consider adding 'undefined' to the types of the target's properties.
!!! error TS2375:   Types of property 'value' are incompatible.
!!! error TS2375:     Type 'undefined' is not assignable to type 'number'.
    